--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -15,7 +15,7 @@ client:
   market: Henderson
   brand: SIMPLY VEGAS Real Estate
   brokerage:
-  address: 1780 Horizon Ridge Parkway, Henderson, NV 89012
+  address: 1780 Horizon Ridge Parkway Suite 100<br>Henderson, NV 89012
   phone: 702-622-6960
   phone_type:
   phone2:
